# osticket-api

./: .dockerignore  .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  README.md  client_test.py  docker-compose.test.yml  error_log.txt  main.py  models.py  pyproject.toml  test_main.http  utils.py
.github/workflows/: release.yml  tests.yml  version-check.yml
tests/: conftest.py  test_api.py  test_startup.py  test_unit.py
tests/schema/: install-mysql.sql
