[project]
name = "osticket-api"
version = "0.6.0"
description = "A new API for OSTicket"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = ["tests"]
addopts = "--cov=main --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
